<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/first_part"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/fileIcon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/file_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/last_part"
                android:layout_toEndOf="@+id/first_part"
                android:gravity="center_vertical"
                android:orientation="vertical"
                tools:ignore="UnknownIdInLayout">

                <TextView
                    android:id="@+id/send_data_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/file_name"
                    android:textColor="@color/textGreyColor"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/size_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="size"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" - "
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/file_Size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mb"
                        android:textSize="10sp" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>