<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:id="@+id/space"
        android:layout_width="50dp"
        android:layout_alignParentEnd="true"
        android:layout_height="match_parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/space"
        app:cardBackgroundColor="#E8F0FD"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_toStartOf="@+id/last_part"
                    android:gravity="center">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/iconCard"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/white"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="25dp">

                        <ImageView
                            android:id="@+id/fileIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/file_icon"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="15dp"
                            android:contentDescription="@string/todo" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/send_data_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="#061832"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@string/file_name" />
                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/last_part"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/progress_done"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/todo" />

                    <Button
                        android:id="@+id/deleteButton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_delete"/>
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/progressBar_sending"
                    style="@style/LinearBlueProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    tools:progress="50"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/currentDataStatus"
                        android:layout_width="wrap_content"
                        android:textColor="#104BA1"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:text="@string/zero"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#104BA1"
                        android:textSize="10sp"
                        android:text="@string/mb"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#104BA1"
                        android:textSize="10sp"
                        android:text="@string/slash"/>

                    <TextView
                        android:id="@+id/file_Size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#104BA1"
                        android:textSize="10sp"
                        android:text="@string/zero"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#104BA1"
                        android:textSize="10sp"
                        android:text="@string/mb"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>