<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/contactToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/s_white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/backButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/back_arrow" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="40dp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:text="Edit Profile"/>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center">
                    <ProgressBar
                        android:id="@+id/save_progress_bar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="5dp"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/save"
                        android:textColor="@color/google_blue"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>
    <View
        android:id="@+id/under_line"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_below="@+id/contactToolbar"
        android:background="@color/border_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/under_line"
        android:background="@color/background"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/s_white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_profile_first"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"

                    android:orientation="horizontal"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardCornerRadius="40dp">
                            <ImageView
                                android:id="@+id/profile_edit_pic"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/edit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/edit"
                            android:textColor="@color/google_blue"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/enter_your_name_and_add_an_optional_profile_picture"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <View
                        android:id="@+id/name_borderline"
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@color/border_line"/>
                    <EditText
                        android:id="@+id/name_editText"
                        android:layout_width="match_parent"
                        android:background="@color/s_white"
                        android:layout_below="@+id/name_borderline"
                        android:text="@string/app_name"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        android:layout_height="40dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.1dp"
                        android:background="@color/border_line"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/border_line"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/light_gray"
            android:textSize="10sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            tools:ignore="SmallSp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="50.2dp">

            <View
                android:id="@+id/phoneNumber_border_line"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/border_line"/>
            <TextView
                android:id="@+id/phone_number_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="20dp"
                android:layout_below="@+id/phoneNumber_border_line"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/blank_number"
                android:background="@color/s_white"
                tools:ignore="RtlSymmetry" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/border_line"
                android:layout_alignParentBottom="true"/>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/border_line"
            android:textStyle="normal"
            android:textSize="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/border_line"
            android:text="@string/app_name"
            android:textStyle="normal"/>
    </LinearLayout>
</RelativeLayout>